# hellocplusplus

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  sample.cpp
src/: sample.cpp
src/lib/HelloWorld/: CMakeLists.txt  helloworld.cpp  helloworld.hpp  helloworld_test.cpp
tests/: CMakeLists.txt  helloworld_tests.cpp
